TA-759 fixes result margins on tablet

--- a/src/client/components/organisms/office-result/office-result.scss
+++ b/src/client/components/organisms/office-result/office-result.scss
@@ -24,6 +24,8 @@
   }
 
   @include grid-media($sba-grid-medium) {
+    margin-left: 30px;
+    margin-right: 30px;
     h2 {
       font-size: 20px;
       font-weight: 600;
@@ -184,6 +186,9 @@
   margin-top: -20px;
   margin-left: 17px;
   padding-top: 20px;
+  @include grid-media($sba-grid-medium) {
+    margin-left: 27px;
+  }
 }
 
 .isFirstHoveredResult {
